--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,11 @@ body, html {
     align-items: center;
     justify-content: center;
     width: 100%;
-    background: linear-gradient(to bottom, rgb(19, 15, 24), rgb(41, 32, 50)); /* Gradient from top to bottom */
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Add shadow along the sides */
-
+    background: 
+        url(/images/noise.svg),
+        linear-gradient(to bottom, rgb(19, 15, 24), rgb(41, 32, 50)); /* Solid color */
+    background-blend-mode: soft-light; 
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); 
 }
 
 a {
@@ -52,7 +54,10 @@ hr {
     height: 80px; /* Adjust height as needed */
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: rgba(60, 136, 168, 1); /* needed */
+    background:
+        url(/images/noise.svg), 
+        rgba(60, 136, 168, 1); /* Gradient from top to bottom */
+    background-blend-mode: color-burn;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -94,7 +99,10 @@ nav a:hover, nav a.active {
 
 /* SECTION DEFINITIONS */
 #home {
-    background: linear-gradient(to bottom, rgba(60, 136, 168, 1), rgb(38, 109, 140)); /* Gradient from top to bottom */
+    background:
+        url(/images/noise.svg), 
+        linear-gradient(to bottom, rgba(60, 136, 168, 1), rgb(38, 109, 140)); /* Gradient from top to bottom */
+    background-blend-mode: color-burn;
     height: 100vh; /* Full viewport height */
     width: 100%; /* Full width */
 }
@@ -133,8 +141,10 @@ nav a:hover, nav a.active {
 #footer { /* thin strip at the very bottom */
     width: 100%;
     height: 30px; /* Adjust height as needed */
-    background-color: rgba(60, 136, 168, 1); /* Set background color */
-    color: rgb(74, 74, 74);
+    background:
+        url(/images/noise.svg), 
+        rgba(60, 136, 168, 1); /* Gradient from top to bottom */
+    background-blend-mode: color-burn;
     max-width: 1200px; /* Match the max-width of the wrapper */
     display: flex;
     z-index: 1000;
